BUGFIX: fixing z-index related bugs in contents page

--- a/src/views/Contents/Contents.module.scss
+++ b/src/views/Contents/Contents.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 70px;
-
+    z-index: 1;
     .contentTitles {
       font-size: 24px;
       color: #fff;
@@ -28,6 +28,7 @@
     flex-direction: column;
     width: 100%;
     gap: 70px;
+    z-index: 1;
     .closeContent {
       display: flex;
       justify-content: flex-end;
